--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "vue_project",
   "version": "0.0.0",
   "private": true,
+  "homepage": "https://doriskuo.github.io/vue-project/",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -14,6 +16,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
+    "gh-pages": "^6.3.0",
     "vite": "^7.0.0",
     "vite-plugin-vue-devtools": "^7.7.7"
   }
